# Development-Template-2-4-2021

./: CMakeLists.txt  README.md
CircleLIB/: CMakeLists.txt  Circle.cpp  Circle.h
ConverterLIB/: CMakeLists.txt  Converter.cpp  Converter.h
ConverterToArabicLIB/: CMakeLists.txt
LineLIB/: CMakeLists.txt  Line.cpp  Line.h
PlexLIB/: CMakeLists.txt  Plex.cpp  Plex.h
PointLIB/: CMakeLists.txt  Point.cpp  Point.h
TArrayTableLIB/: CMakeLists.txt  TArrayTable.h
THashTableLIB/: CMakeLists.txt  THashTable.h
TLinkLIB/: CMakeLists.txt  TLink.cpp  TLink.h
TListLIB/: CMakeLists.txt  TList.h
TMonom_TPolinomLIB/: CMakeLists.txt  TMonom_TPolinom.h
TStackLIB/: CMakeLists.txt  TStack.h
TTableLIB/: CMakeLists.txt  TTable.h
TTextLIB/: CMakeLists.txt  TText.cpp  TText.h
TTreeTableLIB/: CMakeLists.txt  TTreeTable.h
TwoPointersLIB/: CMakeLists.txt  TwoPointers.cpp  TwoPointers.h
gtest/: gtest-all.cc  gtest.h
main/: CMakeLists.txt  main.cpp
spreadsheet_1LIB/: CMakeLists.txt  spreadsheet_1.cpp  spreadsheet_1.h
test/: CMakeLists.txt  Plex.cpp  test_Converter.cpp  test_Link.cpp  test_TList.cpp  test_TMonom_TPolinom.cpp  test_Table.cpp  test_Text.cpp  test_TwoPointers.cpp
